style: change room to channel
